Add redis rate limit handlers
